Created a first Hello World Programm. Used some Ionic featueres for input,forms and buttons on the HomePage to get some input an interact with the user as an example. Created another Page and tried some routing and getting the input of the Homepage. Unfortunately i needed to stop the organization of the imports, because there is a bug in vscode on mac.

--- a/frontend/src/app/home/home.page.html
+++ b/frontend/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Digitact
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,20 +9,40 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large" style="color: grey;">Digitact</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>
-      Start with Ionic
-      <a
-        target="_blank"
-        rel="noopener noreferrer"
-        href="https://ionicframework.com/docs/components"
-        >UI Components</a
-      >
+    <span style="color: red;">
+      Hello World!
+    </span>
+    <p style="color: black;">
+      Welcome to our new app
     </p>
+    <hr />
+    <form [formGroup]="checkOutForm">
+      <ion-item>
+        <ion-label>Name</ion-label>
+        <ion-input
+          required
+          type="text"
+          formControlName="firstName"
+          style="color: gray;"
+        ></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Last Name</ion-label>
+        <ion-input
+          style="color: gray;"
+          type="text"
+          formControlName="lastName"
+        ></ion-input>
+      </ion-item>
+      <hr />
+      <ion-button (click)="myS()">
+        Send
+      </ion-button>
+    </form>
   </div>
 </ion-content>
