Add a new css file for our global styles

--- a/frontend/src/app/application-form/application-form.page.html
+++ b/frontend/src/app/application-form/application-form.page.html
@@ -5,22 +5,24 @@
 </ion-header>
 
 <ion-content>
-  <!-- The following buttons are only used for testing any may later be removed. -->
-  <ion-button (click)="navigateToStep(APPLICATION_STEP.BasicInformation)"
-    >Basic Information</ion-button
-  >
-  <ion-button (click)="navigateToStep(APPLICATION_STEP.ContactInformation)"
-    >Contact Information</ion-button
-  >
+  <div class="default-content">
+    <!-- The following buttons are only used for testing any may later be removed. -->
+    <ion-button (click)="navigateToStep(APPLICATION_STEP.BasicInformation)"
+      >Basic Information</ion-button
+    >
+    <ion-button (click)="navigateToStep(APPLICATION_STEP.ContactInformation)"
+      >Contact Information</ion-button
+    >
 
-  <!-- A really simple way to load the different form steps. -->
-  <ng-container [ngSwitch]="currentStep">
-    <app-af-basic-information
-      *ngSwitchCase="APPLICATION_STEP.BasicInformation"
-    ></app-af-basic-information>
+    <!-- A really simple way to load the different form steps. -->
+    <ng-container [ngSwitch]="currentStep">
+      <app-af-basic-information
+        *ngSwitchCase="APPLICATION_STEP.BasicInformation"
+      ></app-af-basic-information>
 
-    <app-af-contact-information
-      *ngSwitchCase="APPLICATION_STEP.ContactInformation"
-    ></app-af-contact-information>
-  </ng-container>
+      <app-af-contact-information
+        *ngSwitchCase="APPLICATION_STEP.ContactInformation"
+      ></app-af-contact-information>
+    </ng-container>
+  </div>
 </ion-content>
