Small comment correction

--- a/frontend/src/app/home/home.page.scss
+++ b/frontend/src/app/home/home.page.scss
@@ -36,7 +36,7 @@ h3 {
   letter-spacing: 4px;
   width: 100%;
 
-  // Add some spacing so that the button
+  // Add some spacing so that the button is not "pressed" against the above content when the screen has a small height.
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
