--- a/frontend/src/app/home/home.page.scss
+++ b/frontend/src/app/home/home.page.scss
@@ -35,6 +35,7 @@ h3 {
   font-weight: 500;
   letter-spacing: 4px;
   width: 100%;
+  outline: none;
 
   // Add some spacing so that the button is not "pressed" against the above content when the screen has a small height.
   margin-top: 2rem;
