Initial UI and for interactions done

--- a/frontend/src/app/home/home.page.html
+++ b/frontend/src/app/home/home.page.html
@@ -3,6 +3,6 @@
     <img class="logo" src="assets/logo/Consileon-Logo.svg" />
     <h1>Welcome to Consileon</h1>
     <h3>We make the difference</h3>
-    <button class="fancy-button">Apply now</button>
+    <button class="fancy-button" (click)="onStartApplication()">Apply now</button>
   </div>
 </ion-content>
