--- a/frontend/src/app/forms/forms.page.scss
+++ b/frontend/src/app/forms/forms.page.scss
@@ -7,7 +7,8 @@
     font-weight: 500;
     letter-spacing: 4px;
     margin-bottom: 3rem;
-    width:90%;
+    width:90%;;
+    outline: none;
   }
 
   ion-icon {
