--- a/frontend/src/app/forms/forms.page.scss
+++ b/frontend/src/app/forms/forms.page.scss
@@ -1,17 +1,8 @@
-.fancy-button {
-    font-size: 26px;
-    color: var(--ion-color-secondary-contrast);
-    background: var(--ion-color-secondary);
-    padding: 1rem;
-    border-radius: 1000px 0 1000px 1000px;
-    font-weight: 500;
-    letter-spacing: 4px;
-    margin-bottom: 3rem;
+.width90 {
     width:90%;;
-    outline: none;
   }
 
-  ion-icon {
+  .font30 {
       font-size: 30px;
   }
 
@@ -19,4 +10,9 @@
       height:10px;
   }
 
-  
+  .progresstext{
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 20px;
+    padding-top: 10px;
+  }
