--- a/frontend/src/app/forms/forms.page.scss
+++ b/frontend/src/app/forms/forms.page.scss
@@ -1,18 +1,18 @@
 .width90 {
-    width:90%;;
-  }
+  width: 90%;
+}
 
-  .font30 {
-      font-size: 30px;
-  }
+.font30 {
+  font-size: 30px;
+}
 
-  ion-progress-bar {
-      height:10px;
-  }
+ion-progress-bar {
+  height: 10px;
+}
 
-  .progresstext{
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 20px;
-    padding-top: 10px;
-  }
+.progresstext {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 20px;
+  padding-top: 10px;
+}
