--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -9,30 +9,47 @@
           Step {{currentMenu.id}}/ {{totalSteps}}
         </ion-col>
         <ion-col>
-          <ion-menu-button class="ion-float-right font30" autoHide="true" menuClose id="main">
+          <ion-menu-button
+            class="ion-float-right font30"
+            autoHide="true"
+            menuClose
+            id="main"
+          >
             <ion-icon name="list"></ion-icon>
           </ion-menu-button>
         </ion-col>
       </ion-row>
     </ion-grid>
 
-    <ion-progress-bar value={{progressPercentage}}></ion-progress-bar>
+    <ion-progress-bar value="{{progressPercentage}}"></ion-progress-bar>
   </ion-toolbar>
 </ion-header>
 
-<app-side-menu [sideMenuList]="sideMenuList" (pageProgressStatusCallBack)="onFormStepsNavigation($event)">
+<app-side-menu
+  [sideMenuList]="sideMenuList"
+  (pageProgressStatusCallBack)="onFormStepsNavigation($event)"
+>
 </app-side-menu>
 
 <ion-content class="ion-padding">
   <ng-container [ngSwitch]="currentMenu.selector">
-    <form-basic-info (pageProgressStatusCallBack)="pageProgressStatusCallBack($event)" [menuObject]="currentMenu"
-      [basicInfoObject]="basicInfoObj" *ngSwitchCase="'form-basic-info'">
+    <form-basic-info
+      (pageProgressStatusCallBack)="pageProgressStatusCallBack($event)"
+      [menuObject]="currentMenu"
+      [basicInfoObject]="basicInfoObj"
+      *ngSwitchCase="'form-basic-info'"
+    >
     </form-basic-info>
   </ng-container>
 </ion-content>
 
 <ion-footer class="ion-no-border">
   <ion-toolbar class="ion-text-center">
-    <button class="fancy-button align center width90" (click)="navigateToNextForm()">Continue</button>
+    <button
+      class="fancy-button align center width90"
+      (click)="navigateToNextForm()"
+    >
+      Continue
+    </button>
   </ion-toolbar>
 </ion-footer>
