--- a/frontend/src/app/forms/side-menu/side-menu.component.html
+++ b/frontend/src/app/forms/side-menu/side-menu.component.html
@@ -1,5 +1,4 @@
 <ion-menu side="end" lines="none" menuId="first" contentId="main">
-
   <ion-header class="ion-no-border">
     <ion-toolbar lines="none">
       <ion-list>
@@ -11,26 +10,34 @@
   </ion-header>
 
   <ion-content>
-
     <ion-item lines="none" class="ion-text-justify">
-      <h3> If you want to go to a previous step, just click on the element in the list! </h3>
+      <h3>
+        If you want to go to a previous step, just click on the element in the
+        list!
+      </h3>
     </ion-item>
 
     <ion-list lines="none" *ngFor="let menu of sideMenuList">
       <ion-menu-toggle auto-hide="true">
-
-        <ion-item class="ion-padding-top font25" (click)="onMenuChange(menu)" auto-hide="true">
-
-          <ion-icon [name]="menu.isCompleted? 'checkmark-circle-outline' : 'ellipse-outline' "
-            [color]="menu.isActive ? 'tertiary' : 'medium'"></ion-icon>
-          <ion-label class="ion-padding-horizontal" [color]="menu.isActive ? 'tertiary' : 'medium'">
-            {{menu.displayName}}
+        <ion-item
+          class="ion-padding-top font25"
+          (click)="onMenuChange(menu)"
+          auto-hide="true"
+        >
+          <ion-icon
+            [name]="
+              menu.isCompleted ? 'checkmark-circle-outline' : 'ellipse-outline'
+            "
+            [color]="menu.isActive ? 'tertiary' : 'medium'"
+          ></ion-icon>
+          <ion-label
+            class="ion-padding-horizontal"
+            [color]="menu.isActive ? 'tertiary' : 'medium'"
+          >
+            {{ menu.displayName }}
           </ion-label>
         </ion-item>
       </ion-menu-toggle>
-
     </ion-list>
-
   </ion-content>
-
 </ion-menu>
