--- a/frontend/src/app/home/home.page.html
+++ b/frontend/src/app/home/home.page.html
@@ -1,48 +1,21 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Digitact
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <div class="container">
+    <div class="logo-and-message">
+      <svg class="logo" viewBox="0 0 32 31">
+        <path class="logo-triangles"
+          d="M390.307,55.034V69.156H376.025C376.025,62.566,383.007,55.034,390.307,55.034Zm0,30.965V71.877H376.025C376.025,78.467,383.007,86,390.307,86Zm2.751,0V71.877H407.34C407.34,78.467,400.357,86,393.058,86Z"
+          transform="translate(-375.5, -55)"></path>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large" style="color: grey;">Digitact</ion-title>
-    </ion-toolbar>
-  </ion-header>
+        <path class="logo-square" d="M393.062,55.031h14.282V69.125H393.062V55.031Z" transform="translate(-375.5, -55)">
+        </path>
+      </svg>
 
-  <div id="container">
-    <span style="color: red;">
-      Hello World!
-    </span>
-    <p style="color: black;">
-      Welcome to our new app
-    </p>
-    <hr />
-    <form [formGroup]="checkOutForm">
-      <ion-item>
-        <ion-label>Name</ion-label>
-        <ion-input
-          required
-          type="text"
-          formControlName="firstName"
-          style="color: gray;"
-        ></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label>Last Name</ion-label>
-        <ion-input
-          style="color: gray;"
-          type="text"
-          formControlName="lastName"
-        ></ion-input>
-      </ion-item>
-      <hr />
-      <ion-button (click)="myS()">
-        Send
-      </ion-button>
-    </form>
+      <h1>Welcome to Consileon</h1>
+      <h3>We make the difference</h3>
+    </div>
+
+    <div class="button-container">
+      <button class="fancy-button" (click)="onStartApplication()">Apply now</button>
+    </div>
   </div>
 </ion-content>
