--- a/frontend/src/app/forms/steps/contact-info/contact-info.component.html
+++ b/frontend/src/app/forms/steps/contact-info/contact-info.component.html
@@ -5,7 +5,8 @@
     <ion-label position="floating" color="medium">Phone Number</ion-label>
     <ion-input
       type="text"
-      formControlName="contactInfoObject.controls.phoneNumber"
+      maxlength=12
+      [formControl]="contactInfoObject.controls.phoneNumber"
       (ionChange)="onValChange()"
     ></ion-input>
   </ion-item>
