--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -40,6 +40,13 @@
       *ngSwitchCase="'form-basic-info'"
     >
     </form-basic-info>
+    <form-contact-info
+      (pageProgressStatusCallBack)="pageProgressStatusCallBack($event)"
+      [menuObject]="currentMenu"
+      [contactInfoObject]="contactInfoObj"
+      *ngSwitchCase="'form-contact-info'"
+    >
+    </form-contact-info>
   </ng-container>
 </ion-content>
 
