--- a/frontend/src/app/home/home.page.html
+++ b/frontend/src/app/home/home.page.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="button-container">
-      <button class="fancy-button" (click)="onStartApplication()">
+      <button class="fancy-button" (click)="startApplication()">
         Apply now
       </button>
     </div>
