--- a/frontend/src/app/forms/steps/basic-info/basic-info.component.html
+++ b/frontend/src/app/forms/steps/basic-info/basic-info.component.html
@@ -15,7 +15,6 @@
     <ion-select
       [formControl]="basicInfoObject.controls.salutation"
       interface="popover"
-      (ionChange)="onValChange()"
     >
       <ion-select-option
         *ngFor="let salutation of salutationsArray"
@@ -28,17 +27,11 @@
 
   <ion-item>
     <ion-label position="floating" color="medium">First name</ion-label>
-    <ion-input
-      [formControl]="basicInfoObject.controls.firstName"
-      (ionChange)="onValChange()"
-    ></ion-input>
+    <ion-input [formControl]="basicInfoObject.controls.firstName"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating" color="medium">Last name</ion-label>
-    <ion-input
-      [formControl]="basicInfoObject.controls.lastName"
-      (ionChange)="onValChange()"
-    ></ion-input>
+    <ion-input [formControl]="basicInfoObject.controls.lastName"></ion-input>
   </ion-item>
 </ion-list>
