Header tool bar UI issues fixed and div containers added

--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -1,28 +1,24 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-grid>
-      <ion-row>
-        <ion-col class="font30">
-          <ion-icon name="close" (click)="closeForm()"></ion-icon>
-        </ion-col>
-        <ion-col class="ion-text-center ion-float-center progresstext">
-          Step {{currentMenu.id}}/ {{totalSteps}}
-        </ion-col>
-        <ion-col>
-          <ion-menu-button
-            class="ion-float-right font30"
-            autoHide="true"
-            menuClose
-            id="main"
-          >
-            <ion-icon name="list"></ion-icon>
-          </ion-menu-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-
-    <ion-progress-bar value="{{progressPercentage}}"></ion-progress-bar>
+    <ion-buttons>
+      <ion-button slot="start" (click)="closeForm()">
+        <ion-icon slot="icon-only" name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title class="ion-text-center"
+      >Step {{currentMenu.id}}/ {{totalSteps}}</ion-title
+    >
+    <ion-menu-button
+      slot="end"
+      class="ion-float-right"
+      autoHide="true"
+      menuClose
+      id="main"
+    >
+      <ion-icon slot="icon-only" name="list-outline"></ion-icon>
+    </ion-menu-button>
   </ion-toolbar>
+  <ion-progress-bar value="{{progressPercentage}}"></ion-progress-bar>
 </ion-header>
 
 <app-side-menu
@@ -30,25 +26,23 @@
   (chosenStep)="navigateToStep($event)"
 >
 </app-side-menu>
-
 <ion-content class="ion-padding">
-  <ng-container [ngSwitch]="currentMenu.selector">
-    <form-basic-info
-      (updatedProgressStatus)="updateProgessStatus()"
-      [menuObject]="currentMenu"
-      [basicInfoObject]="basicInfoObj"
-      *ngSwitchCase="'form-basic-info'"
-    >
-    </form-basic-info>
-  </ng-container>
+  <div class="forms-cantainer">
+    <ng-container [ngSwitch]="currentMenu.selector">
+      <form-basic-info
+        (updatedProgressStatus)="updateProgessStatus()"
+        [menuObject]="currentMenu"
+        [basicInfoObject]="basicInfoObj"
+        *ngSwitchCase="'form-basic-info'"
+      >
+      </form-basic-info>
+    </ng-container>
+  </div>
 </ion-content>
 
 <ion-footer class="ion-no-border">
-  <ion-toolbar class="ion-text-center">
-    <button
-      class="fancy-button align center width90"
-      (click)="navigateToNextStep()"
-    >
+  <ion-toolbar class="ion-text-center forms-cantainer ion-no-padding">
+    <button class="fancy-button align center" (click)="navigateToNextStep()">
       Continue
     </button>
   </ion-toolbar>
