Comments modified to follow a common standard procedure

--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -26,7 +26,7 @@
   (chosenStep)="navigateToStep($event)"
 >
 </app-side-menu>
-<ion-content class="ion-padding">
+<ion-content class="ion-no-padding">
   <div class="forms-cantainer">
     <ng-container [ngSwitch]="currentMenu.selector">
       <form-basic-info
