List icon changed to list-outline icon

--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -15,7 +15,7 @@
       menuClose
       id="main"
     >
-      <ion-icon slot="icon-only" name="list-outline"></ion-icon>
+      <ion-icon name="list-outline"></ion-icon>
     </ion-menu-button>
   </ion-toolbar>
   <ion-progress-bar value="{{progressPercentage}}"></ion-progress-bar>
