Tertiary color changed

--- a/frontend/src/theme/variables.scss
+++ b/frontend/src/theme/variables.scss
@@ -91,7 +91,7 @@
     /** secondary **/
     @include color-variables(secondary, #cc0033, #000000);
 
-    --ion-color-tertiary: #6a64ff;
+    --ion-color-tertiary: #5875c7;
     --ion-color-tertiary-rgb: 106, 100, 255;
     --ion-color-tertiary-contrast: #ffffff;
     --ion-color-tertiary-contrast-rgb: 255, 255, 255;
