--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -41,7 +41,7 @@
 </ion-content>
 
 <ion-footer class="ion-no-border">
-  <ion-toolbar class="ion-text-center forms-cantainer ion-no-padding">
+  <ion-toolbar class="ion-text-center ion-no-padding footer-container">
     <button class="fancy-button align center" (click)="navigateToNextStep()">
       Continue
     </button>
