--- a/frontend/src/app/forms/steps/submit-page/submit-page.component.html
+++ b/frontend/src/app/forms/steps/submit-page/submit-page.component.html
@@ -5,7 +5,8 @@
 
   <ion-item lines="none">
     <h2 class="ion-text-justify">
-      That's it! You can now submit your application and hand the device back to our team.
+      That's it! You can now submit your application and hand the device back to
+      our team.
     </h2>
   </ion-item>
 </ion-list>
