--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -9,7 +9,12 @@
           Step {{currentMenu.id}}/ {{totalSteps}}
         </ion-col>
         <ion-col>
-          <ion-menu-button class="ion-float-right font30" autoHide="true" menuClose id="main">
+          <ion-menu-button
+            class="ion-float-right font30"
+            autoHide="true"
+            menuClose
+            id="main"
+          >
             <ion-icon name="list"></ion-icon>
           </ion-menu-button>
         </ion-col>
@@ -20,27 +25,37 @@
   </ion-toolbar>
 </ion-header>
 
-<app-side-menu [sideMenuList]="sideMenuList" (pageProgressStatusCallBack)="onFormStepsNavigation($event)">
+<app-side-menu
+  [sideMenuList]="sideMenuList"
+  (pageProgressStatusCallBack)="onFormStepsNavigation($event)"
+>
 </app-side-menu>
 
 <ion-content class="ion-padding">
   <ng-container [ngSwitch]="currentMenu.selector">
-    <form-basic-info (pageProgressStatusCallBack)="pageProgressStatusCallBack($event)" [menuObject]="currentMenu"
-      [basicInfoObject]="basicInfoObj" *ngSwitchCase="'form-basic-info'">
+    <form-basic-info
+      (pageProgressStatusCallBack)="pageProgressStatusCallBack($event)"
+      [menuObject]="currentMenu"
+      [basicInfoObject]="basicInfoObj"
+      *ngSwitchCase="'form-basic-info'"
+    >
     </form-basic-info>
-
   </ng-container>
   <ng-container [ngSwitch]="currentMenu.selector">
-    <app-submit-page (pageProgressStatusCallBack)="pageProgressStatusCallBack($event)"
-      *ngSwitchCase="'app-submit-page'">
+    <app-submit-page
+      (pageProgressStatusCallBack)="pageProgressStatusCallBack($event)"
+      *ngSwitchCase="'app-submit-page'"
+    >
     </app-submit-page>
   </ng-container>
 </ion-content>
 
-
 <ion-footer class="ion-no-border">
   <ion-toolbar class="ion-text-center">
-    <button class="fancy-button align center width90" (click)="navigateToNextFormOrSubmit()">
+    <button
+      class="fancy-button align center width90"
+      (click)="navigateToNextFormOrSubmit()"
+    >
       {{this.getButtonText()}}
     </button>
   </ion-toolbar>
