comments are added

--- a/frontend/src/app/forms/confirmation/confirmation.page.html
+++ b/frontend/src/app/forms/confirmation/confirmation.page.html
@@ -18,7 +18,7 @@
       </button>
       <button
         class="fancy-button align center secondary-color"
-        (click)="quitForm()"
+        (click)="quitPage()"
       >
         Quit
       </button>
