--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -27,7 +27,7 @@
 >
 </app-side-menu>
 <ion-content class="ion-no-padding">
-  <div class="forms-cantainer">
+  <div class="forms-container">
     <ng-container [ngSwitch]="currentMenu.selector">
       <form-basic-info
         (updatedMenuCompletionStatus)="updateProgessStatus()"
