--- a/frontend/src/app/forms/forms.page.scss
+++ b/frontend/src/app/forms/forms.page.scss
@@ -2,7 +2,7 @@ ion-progress-bar {
   height: 10px;
 }
 
-.forms-cantainer {
+.forms-container {
   padding: 2rem;
   max-width: 100%;
   margin-right: auto;
