Format changed and COmment corrected

--- a/frontend/src/app/forms/steps/contact-info/contact-info.component.html
+++ b/frontend/src/app/forms/steps/contact-info/contact-info.component.html
@@ -1,5 +1,5 @@
 <ion-list>
-  <ion-item>
+  <ion-item class="ion-no-padding">
     <ion-label position="floating" color="medium">Phone Number</ion-label>
     <ion-input
       type="text"
@@ -8,7 +8,7 @@
     ></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item class="ion-no-padding">
     <ion-label position="floating" color="medium">E-mail</ion-label>
     <ion-input
       type="text"
@@ -16,7 +16,7 @@
     ></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item class="ion-no-padding">
     <ion-label position="floating" color="medium">LinkedIn Account</ion-label>
     <ion-input
       type="url"
@@ -24,7 +24,7 @@
     ></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item class="ion-no-padding">
     <ion-label position="floating" color="medium">Xing Account</ion-label>
     <ion-input
       type="url"
