Make the rating page look more like in the mockups. Add some global styles. Implement basic side menu.

--- a/frontend/src/app/rating/hr-side-menu/hr-side-menu.component.scss
+++ b/frontend/src/app/rating/hr-side-menu/hr-side-menu.component.scss
@@ -1,6 +1,12 @@
-ion-list-header,
+.side-menu-container {
+  padding: 2rem;
+}
+.side-menu-heading {
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
+
 ion-item {
   // A "hack" to make sure the element is aligned completely to the left.
   --ion-safe-area-left: 0;
-  --ion-safe-area-right: 0;
 }
