--- a/frontend/src/theme/custom.scss
+++ b/frontend/src/theme/custom.scss
@@ -26,3 +26,56 @@ h2,
 h3 {
   color: var(--ion-color-primary);
 }
+
+ion-list-header {
+  font-size: 23px;
+  font-weight: 400;
+  margin-top: 2rem;
+  --color: var(--ion-color-primary);
+}
+
+.fancy-button {
+  font-size: 26px;
+  color: var(--ion-color-secondary-contrast);
+  background: var(--ion-color-secondary);
+  padding: 1rem;
+  border-radius: 1000px 0 1000px 1000px;
+  font-weight: 500;
+  letter-spacing: 4px;
+  width: 100%;
+  outline: none;
+
+  // Add some spacing so that the button is not "pressed" against the above content when the screen has a small height.
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.main-container {
+  width: 100%;
+  max-width: 475px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 1.5rem;
+}
+
+/*
+  If you want to have some buttons at the bottom of the page, use the following structure:
+
+  ```
+  <div class="main-container with-bottom-buttons">
+    <div class="content">Your content here</div>
+    <div class="buttons-container">The buttons here</div>
+  </div>
+  ```
+*/
+.main-container.with-bottom-buttons {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+.content {
+  flex-grow: 1;
+}
+.buttons-container {
+  flex-grow: 0;
+}
