--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -14,6 +14,7 @@
       autoHide="true"
       menuClose
       id="main"
+      asd
     >
       <ion-icon name="list-outline"></ion-icon>
     </ion-menu-button>
